Fix contact page display on smaller resolutions

--- a/css/contact.css
+++ b/css/contact.css
@@ -1,3 +1,7 @@
+#hero {
+    height: 100vh;
+    overflow-y: scroll;
+}
 #contact-icon-container {
     color: white;
     text-transform: uppercase;
@@ -20,7 +24,7 @@
     color: white;
 }
 #mail-address {
-    font-size: 1rem;
+    font-size: auto;
     color: rgb(31, 30, 30);
     font-weight: 600;
     font-family: "Montserrat";
@@ -36,11 +40,6 @@
     color: #ff8800;
     text-decoration: underline;
 }
-@media (min-height: 769px) {
-    #hero {
-        height: 100vh;
-    }
-}
 #subtitle {
     font-size: 2rem;
 }
@@ -51,7 +50,14 @@
     #contact-icon-container i {
         font-size: 6rem;
     }
+}
+@media (max-width: 355px) {
     #mail-address {
-        font-size: 1.5rem;
+        font-size: .8rem;
+    }
+}
+@media (max-width: 320px) {
+    #mail-address {
+        font-size: .6rem;
     }
 }
